2008-04-28  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/engines/orbitalengine.*,
	libavogadro/src/engines/orbitalsettingswidget.ui: Only recalculate the
	isosurface when editing is finished, minimum spinner value of zero.

	* avogadro/src/mainwindow.cpp: Tracked the bug of the disappearing
	molecule - it was never set for extensions after the first window.

	* libavogadro/src/extensions/orbitalextension.cpp: Return if the file
	name is empty.

	* libavogadro/src/extensions/gaussianinputdialog.cpp: Made the reset
	button work. Also connect molecule signals to the dialog.

	* libavogadro/src/extensions/gaussianinputdialog.cpp: Update the
	preview when setMolecule is called. Also added some logic to disable
	basis sets with certain theories.

	* libavogadro/src/extensions/basisset.cpp: Actually call the doD and
	doD5 functions - this really helps when trying to use d-type
	orbitals to generate cubes...

	* libavogadro/src/extensions/CMakeLists.txt,
	libavogadro/src/extensions/gaussianextension.*,
	libavogadro/src/extensions/gaussianinputdialog.*: Added a new Gaussian
	input deck generator. Still quite basic with a few bugs but is already
	generating valid input decks.

2008-04-27  Marcus D. Hanwell  <marcus@cryos.org>

	* avogadro/src/mainwindow.cpp,
	libavogadro/src/extensions/pythonextension.cpp,
	libavogadro/src/tools/directorytreemodel.cpp,
	libavogadro/src/tools/selectrotatetool.cpp: Found a few more cases
	where foreach loops needed fixing.

	* libavogadro/src/glwidget.cpp, libavogadro/src/toolgroup.cpp: Made
	changes to foreach loops as suggested by Albert Astals Cid, prevent
	unnecessary creation of temporary objects.

2008-04-25  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/primitiveitemmodel.cpp: Added in layout change
	signals. Will hopefully prevent crashing.

	* avogadro/src/mainwindow.ui: Move export to a new submenu of
	File.

	* avogadro/src/mainwindow.*: Add drag-and-drop support. Files